<resources>
    <string name="app_name">Food Order</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="say_hello_to_your_app">Say Hello to your app</string>
    <string name="find_your_perfect_car_with_our_dealership_app">Find your perfect car with our dealership app</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_don_t_have_an_account_click_below">If you don\'t have an account?Click Below</string>
    <string name="if_you_have_an_account_click_below">if_you_have_an_account_click_below</string>
    <string name="login">Login</string>
    <string name="explore">Explore</string>
    <string name="new_car_collection">New Car Collection</string>
    <string name="most_popular_deals">Most Popular Deals</string>
    <string name="most_hot_deals">Most Hot Deals</string>
    <string name="give_your_review">Give your Review</string>
    <string name="send">Send</string>
    <string name="see_all_reviews">See all Reviews</string>
    <string name="address">Address</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="shop_name">Shop Name</string>
    <string name="chinese">Chinese</string>
    <string name="_4_0">4.0</string>
    <string name="_20_23min">20-23min</string>
    <string name="save10_use_code_save10_to_avail_this_offer">Save10 - Use code SAVE10 to avail this offer</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="wishlist">WishList</string>
    <string name="profile">Profile</string>
    <string name="your_food_cart">Your food cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="total_amount">Total Amount</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="order_now">Order Now</string>
    <string name="instant_delivery">Instant delivery</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="food_items_delivered_to_you">Food items delivered to you</string>
    <string name="shop_specification">Shop Specification</string>
    <string name="restaurants">Restaurants</string>
    <string name="quantity">Quantity</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_wallet_balance">Your Wallet Balance</string>
    <string name="add_balance">Add Balance</string>
    <string name="amount_to_pay">Amount to Pay</string>
    <string name="balance">Balance</string>
    <string name="add_card">Add Card</string>
    <string name="add_money_to_wallet">Add money to wallet</string>
    <string name="add_money">Add Money</string>
    <string name="log_out">Log Out</string>
</resources>
